# nmr-peak-tracking

./: 0_peak-detection-with-scipy.ipynb  1_track-peaks-across-frames.ipynb  README.md  environment.yml  pyproject.toml
.github/workflows/: python-app.yml
0_explore-trackpy/: 0_using-built-in-predictor.ipynb  1_polynomial-projection.ipynb  README.md
0_peak-detection/: 0_peak-detection-with-scipy.ipynb
0_peak-detection/peak-detection-with-nns/: 0_illustrate-synthetic-patterns.ipynb  1_time-varying-synthetic-patterns.ipynb  README.md
0_peak-detection/peak-detection-with-nns/unet-for-peak-tracking/: 0_train-models.py  1_collect-results.ipynb  README.md
1_grouping-methods/: 0_using-velocity-and-acceleration.ipynb  README.md
1_peak-tracking/: 0_using-built-in-predictor.ipynb
1_post-process-tracks/: 0_match-to-long-patterns.ipynb
3_grouping-methods/: 0_using-velocity-and-acceleration.ipynb  README.md
envs/: environment-cpu.yml  environment-cuda118.yml
nmrtrack/: synthetic.py  torch.py  trackpy.py
nmrtrack/torch/: __init__.py  data.py  models.py
raw-data/: README.md
tests/: test_synthetic.py  test_torch.py  test_trackpy.py
